Add audio feature

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btn_audio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+       android:layout_margin="8dp"
+        android:text="play Audio"
+        app:layout_constraintTop_toBottomOf="@+id/btn_play"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
